# kwtsms-rust

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: audit.yml  codeql.yml  dependabot-automerge.yml  gitguardian.yml  publish.yml
examples/: 01_basic_usage.rs  02_otp_flow.rs  03_bulk_sms.rs  04_error_handling.rs  05_otp_production.rs  README.md
scripts/: release.sh
src/: client.rs  env.rs  errors.rs  lib.rs  logger.rs  message.rs  phone.rs  request.rs  types.rs
tests/: errors_test.rs  integration_test.rs  message_test.rs  phone_test.rs
